Remove unused exception